--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             <button>Sign In</button>
         </div>
         <div class="signup-section">
-            <span class="close-button">&times;</span>
+            <!-- <span class="close-button">&times;</span> -->
             <h2>New Here?</h2>
             <p>Sign up and discover a great amount of new opportunities!</p>
             <button>Sign Up</button>
