--- a/index.html
+++ b/index.html
@@ -208,6 +208,18 @@
         .logo img {
             height: 40px;
         }
+
+        /* Responsive adjustments */
+        @media (max-width: 768px) {
+            .login-container {
+                flex-direction: column;
+            }
+
+            .login-form,
+            .signup-section {
+                width: 100%;
+            }
+        }
     </style>
 </head>
 
